--- a/templates/home.html
+++ b/templates/home.html
@@ -78,13 +78,13 @@
     <hr style="margin: 10px 0;">
     <div class="box1" style="height:60px;">
         <div class="box2" style="width:20%;">
-            <a type="button" id="button1" data-animation="ripple" style="overflow: hidden; position: relative;" onClick="action();">Button1</a>
+            <a type="button" id="button1" data-animation="ripple" style="overflow: hidden; position: relative;" onClick="action();">1</a>
         </div>
         <div class="box2" style="width:20%;">
-            <a type="button" id="button2" data-animation="ripple" style="overflow: hidden; position: relative;" onClick="change();">Button2</a>
+            <a type="button" id="button2" data-animation="ripple" style="overflow: hidden; position: relative;" onClick="change();">2</a>
         </div>
         <div class="box2" style="width:20%;">
-            <a type="button" id="button3" data-animation="ripple" style="overflow: hidden; position: relative;" onclick="img();">Button3</a>
+            <a type="button" id="button3" data-animation="ripple" style="overflow: hidden; position: relative;" onclick="img();">3</a>
         </div>
     </div>
 
