First version of application moved into github

--- a/templates/home.html
+++ b/templates/home.html
@@ -356,8 +356,10 @@
             hidden = !hidden;
             if(hidden) {
                 document.getElementById('button2').style.visibility = 'hidden';
+                document.getElementById('button3').style.visibility = 'hidden';
             } else {
                 document.getElementById('button2').style.visibility = 'visible';
+                document.getElementById('button3').style.visibility = 'visible';
             }
         }
         var off = false;
