First version of application moved into github

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <span class="navbar-brand mx-1 mb-0 font-weight-bold font-italic" style="font-size:1.2em">PA4</span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
