--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,10 @@
 <body id="thediv" style="padding-top:90px;">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <span class="navbar-brand mx-1 mb-0 font-weight-bold font-italic" style="font-size:1.2em">
+    <div class="navbar-brand mx-1 mb-0 font-weight-bold font-italic" style="font-size:1.2em">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
-        </button>PA4</span>
+        </button>PA4</div>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'home' %}">Home</a></li>
