--- a/templates/base.html
+++ b/templates/base.html
@@ -16,35 +16,41 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="navbar-brand mx-1 mb-0 font-weight-bold font-italic" style="font-size:1.2em">
+        PA4
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
-        </button>PA4</div>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'home' %}">Home</a></li>
-                <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'board:index' %}">Board</a></li>
-                <li class="nav-item dropdown mx-1 btn btn-primary" style="float:right">
-                    {% if user.is_active %}
-                    <a class="nav-link dropdown-toggle" style="font-size:1.2em; color: white;"  href="#" data-bs-toggle="dropdown">
-                        <img style="border-radius:5px; -moz-border-radius: 5px;
-                            -khtml-border-radius:5px;
-                            -webkit-border-radius:5px;" src="{{ user.profile.avatar.url }} " width="15" height="15"/>&ensp;{% firstof user.username %}&ensp;{{ user.points }}&ensp;</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'users-profile' %}">My Page</a></li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                        <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
-                    </ul>
-                    {% else %}
-                    <a class="nav-link dropdown-toggle text-white" style="font-size:0.7em" href="#" data-bs-toggle="dropdown">
-                        <i class="fas fa-user"></i>&ensp;익명&ensp;</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
-                        <li><a class="dropdown-item" href="{% url 'users-register' %}">Register</a></li>
-                    </ul>
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'home' %}">Home</a></li>
+            <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'board:index' %}">Board</a></li>
+            <li class="nav-item dropdown mx-1 btn btn-primary" style="float:right">
+                {% if user.is_active %}
+                <a class="nav-link dropdown-toggle" style="font-size:1.2em; color: white;"  href="#" data-bs-toggle="dropdown">
+                    <img style="border-radius:5px; -moz-border-radius: 5px;
+                        -khtml-border-radius:5px;
+                        -webkit-border-radius:5px;" src="{{ user.profile.avatar.url }} " width="15" height="15"/>&ensp;{% firstof user.username %}&ensp;{{ user.points }}&ensp;</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'users-profile' %}">My Page</a></li>
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+                </ul>
+                {% else %}
+                <a class="nav-link dropdown-toggle text-white" style="font-size:0.7em" href="#" data-bs-toggle="dropdown">
+                    <i class="fas fa-user"></i>&ensp;익명&ensp;</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                    <li><a class="dropdown-item" href="{% url 'users-register' %}">Register</a></li>
+                </ul>
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+
 </nav>
 
 <div class="container">
