--- a/templates/base.html
+++ b/templates/base.html
@@ -15,16 +15,11 @@
 <body id="thediv" style="padding-top:90px;">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <div class="navbar-brand mx-1 mb-0 font-weight-bold font-italic" style="font-size:1.2em">
-        PA4
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
+    <span class="navbar-brand mx-1 mb-0 font-weight-bold font-italic" style="font-size:1.2em">PA4</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'home' %}">Home</a></li>
             <li class="nav-item mx-0 btn btn-primary"><a class="nav-link text-white" style="font-size:1.2em" href="{% url 'board:index' %}">Board</a></li>
