First version of application moved into github

--- a/templates/home.html
+++ b/templates/home.html
@@ -72,7 +72,7 @@
 
 {% block content %}
     <div id="img" class="home-image">
-        <h2 class="title">Home</h2>
+        <h2 class="title">PA4</h2>
     </div>
 
     <hr style="margin: 10px 0;">
