--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body id="thediv" style="padding-top:90px;">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <span class="nav-brand mx-0 mb-0 btn btn-primary"><a class="nav-link text-white mx-0" style="font-size:1em" href="{% url 'home' %}">Home</a></span>
+    <span class="navbar-brand mx-0 mb-0 btn btn-primary"><a class="nav-link text-white mx-0" style="font-size:1em" href="{% url 'home' %}">Home</a></span>
     <span class="nav-item mx-0 mb-0 btn btn-primary"><a class="nav-link text-white mx-0" style="font-size:1em" href="{% url 'board:index' %}">Board</a></span>
     <span class="nav-item dropdown mx-0 mb-0 btn btn-primary" style="float:right">
         {% if user.is_active %}
