Added files and changes required for deployment to heroku

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 <script src="https://kit.fontawesome.com/83c045e898.js" crossorigin="anonymous"></script>
 
 {% block extra-script %}
-    <script>
+    <script type="text/javascript">
         $(document).ready(function(){
             $('body').pointer();
         });
