--- a/templates/home.html
+++ b/templates/home.html
@@ -383,51 +383,138 @@
         }
     </script>
     <script type="text/javascript">
-        $(document).ready(function(){
-            $('body').pointer();
-        });
+        (function fairyDustCursor() {
 
-        (function($){
-            $.fn.pointer = function (options) {
-                var settings = {
-                    size : 80,
-                    spd : 300,
-                    color : "#a00"
+              var possibleColors = ["#D61C59", "#E7D84B", "#1B8798"]
+              var width = window.innerWidth;
+              var height = window.innerHeight;
+              var cursor = {x: width/2, y: width/2};
+              var particles = [];
+
+              function init() {
+                bindEvents();
+                loop();
+              }
+
+              // Bind events that are needed
+              function bindEvents() {
+                document.addEventListener('mousemove', onMouseMove);
+                document.addEventListener('touchmove', onTouchMove);
+
+                window.addEventListener('resize', onWindowResize);
+              }
+
+              function onWindowResize(e) {
+                width = window.innerWidth;
+                height = window.innerHeight;
+              }
+
+              function onTouchMove(e) {
+                if( e.touches.length > 0 ) {
+                  for( var i = 0; i < e.touches.length; i++ ) {
+                    addParticle( e.touches[i].clientX, e.touches[i].clientY, possibleColors[Math.floor(Math.random()*possibleColors.length)]);
+                  }
                 }
-                settings = $.extend(settings, options);
+              }
 
-                var circle_style = {
-                    "position":"absolute",
-                    "z-index":9999,
-                    "height":10,
-                    "width":10,
-                    "border":"solid 4px "+settings.color,
-                    "border-radius":settings.size
+              function onMouseMove(e) {
+                cursor.x = e.clientX;
+                cursor.y = e.clientY;
+
+                addParticle( cursor.x, cursor.y, possibleColors[Math.floor(Math.random()*possibleColors.length)]);
+              }
+
+              function addParticle(x, y, color) {
+                var particle = new Particle();
+                particle.init(x, y, color);
+                particles.push(particle);
+              }
+
+              function updateParticles() {
+
+                // Updated
+                for( var i = 0; i < particles.length; i++ ) {
+                  particles[i].update();
                 }
-                return this.each(function() {
-                    var $this = $(this);
-                    $this.css({"position":"relative"});
-                    $(document).click(function(e){
-                        var x = e.pageX-5;
-                        var y = e.pageY-5;
 
-                        var pos = {
-                            top :(-settings.size/2)+y,
-                            left :(-settings.size/2)+x
-                        }
+                // Remove dead particles
+                for( var i = particles.length -1; i >= 0; i-- ) {
+                  if( particles[i].lifeSpan < 0 ) {
+                    particles[i].die();
+                    particles.splice(i, 1);
+                  }
+                }
 
-                        $this.append('<div class="circle"></div>');
-                        $this.find(".circle:last").css(circle_style).css({
-                            "top":y,
-                            "left":x
-                        }).animate({"height":settings.size,"width":settings.size,"left":pos.left,"top":pos.top},{duration:settings.spd,queue:false})
-                        .fadeOut(settings.spd*1.8,function(){
-                            $(this).remove();
-                        });
-                    });
-                });
-            }
-        })(jQuery);
+              }
+
+              function loop() {
+                requestAnimationFrame(loop);
+                updateParticles();
+              }
+
+              /**
+               * Particles
+               */
+
+              function Particle() {
+
+                this.character = "*";
+                this.lifeSpan = 120; //ms
+                this.initialStyles ={
+                  "position": "absolute",
+                  "display": "block",
+                  "pointerEvents": "none",
+                  "z-index": "10000000",
+                  "fontSize": "16px",
+                  "will-change": "transform"
+                };
+
+                // Init, and set properties
+                this.init = function(x, y, color) {
+
+                  this.velocity = {
+                    x:  (Math.random() < 0.5 ? -1 : 1) * (Math.random() / 2),
+                    y: 1
+                  };
+
+                  this.position = {x: x - 10, y: y - 20};
+                  this.initialStyles.color = color;
+
+                  this.element = document.createElement('span');
+                  this.element.innerHTML = this.character;
+                  applyProperties(this.element, this.initialStyles);
+                  this.update();
+
+                  document.querySelector('.navbar-brand').appendChild(this.element);
+                };
+
+                this.update = function() {
+                  this.position.x += this.velocity.x;
+                  this.position.y += this.velocity.y;
+                  this.lifeSpan--;
+
+                  this.element.style.transform = "translate3d(" + this.position.x + "px," + this.position.y + "px, 0) scale(" + (this.lifeSpan / 120) + ")";
+                }
+
+                this.die = function() {
+                  this.element.parentNode.removeChild(this.element);
+                }
+
+              }
+
+              /**
+               * Utils
+               */
+
+              // Applies css `properties` to an element.
+              function applyProperties( target, properties ) {
+                for( var key in properties ) {
+                  target.style[ key ] = properties[ key ];
+                }
+              }
+
+              init();
+            })();
     </script>
 {% endblock %}
 
