Added files and changes required for deployment to heroku

--- a/templates/home.html
+++ b/templates/home.html
@@ -400,6 +400,7 @@
               function bindEvents() {
                 document.addEventListener('mousemove', onMouseMove);
                 document.addEventListener('touchmove', onTouchMove);
+                document.addEventListener('touchstart', onTouchMove);
 
                 window.addEventListener('resize', onWindowResize);
               }
